--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="pudim.html">
                 <img src="pudim.png">
             </a>
-            <h3>pudim</h3>
+            <h3>Pudim</h3>
         </div>
      </div>
         <p>Contatos</p>
