--- a/bolos.html
+++ b/bolos.html
@@ -13,7 +13,7 @@
         }
     </style>
     <link rel="stylesheet" href="stylebolos.css">
-    <link rel="icon" type="image/x-icon" href="logo1.png">
+    <link rel="icon" type="image/x-icon" href="logo1.png" src="index.html">
     <title>Bolos</title>
 </head>
 <body>
