--- a/bolosp.html
+++ b/bolosp.html
@@ -10,7 +10,7 @@
         }}
     </style>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="logo1.png">
+    <link rel="icon" type="image/x-icon" href="logo1.png" src="index.html">
     <title>Bolos de pote</title>
 </head>
 <body>
