--- a/pudim.html
+++ b/pudim.html
@@ -10,7 +10,7 @@
         }}
     </style>
     <link rel="stylesheet" href="pudim.css">
-    <link rel="icon" type="image/x-icon" href="logo1.png">
+    <link rel="icon" type="image/x-icon" href="logo1.png" src="index.html">
     <title>Pudim</title>
 </head>
 <body>
