--- a/torta.html
+++ b/torta.html
@@ -10,12 +10,14 @@
         }}
     </style>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="logo1.png" src="index.html">
+    <link rel="icon" type="image/x-icon" href="logo1.png">
     <title>Torta</title>
 </head>
 <body>
     <div class="tt">
-        <img src="logo1.png">   
+        <a href="index.html">
+        <img src="logo1.png" >   
+        </a>  
     </div>
     <h1>Tortas</h1>
     <div class="sabores">
