--- a/bolos.html
+++ b/bolos.html
@@ -7,18 +7,18 @@
         @media screen and (max-width: 1020px){
             button{
                 display: none;/* DEixar o botão nulo*/
-             }
-
-          
+             }  
         }
     </style>
     <link rel="stylesheet" href="stylebolos.css">
-    <link rel="icon" type="image/x-icon" href="logo1.png" src="index.html">
+    <link rel="icon" type="image/x-icon" href="logo1.png">
     <title>Bolos</title>
 </head>
 <body>
     <div class="tt">
-        <img src="logo1.png">   
+        <a href="index.html">
+        <img src="logo1.png" >   
+        </a>   
     </div>
     <div class="cabe"> 
         <img src="pngtree-chef-hat-png-image_9187453.png">
