--- a/ani.html
+++ b/ani.html
@@ -10,13 +10,15 @@
         }}
     </style>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="logo1.png" src="index.html">
+    <link rel="icon" type="image/x-icon" href="logo1.png">
     <title>Bolo de Aniversario</title>
 </head>
 <body>
     <h1>Bolos de Aniversario</h1>
     <div class="tt">
-        <img src="logo1.png">
+        <a href="index.html">
+        <img src="logo1.png" >   
+        </a> 
     </div>
     <div class="sabores">
         <img src="pngtree-chef-hat-png-image_9187453.png">
